remove fallback file staticApp

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,25 @@
-<form id        =  "uploadForm"
-     enctype   =  "multipart/form-data"
-     action    =  "../upload"
-     method    =  "post"
->
-<input type="file" name="file" />
-<input type="text" name="listname" placeholder="Enter import list" />
-<input type="submit" value="Upload" name="submit"/>
-</form>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  </head>
+  <body>
+
+    <h1>Hello, admin!</h1>
+    <form id        =  "uploadForm"
+         enctype   =  "multipart/form-data"
+         action    =  "../upload"
+         method    =  "post"
+    >
+    <input type="file" name="file" />
+    <input type="text" name="listname" placeholder="Enter import list" />
+    <input type="submit" value="Upload" name="submit"/>
+
+
+    </form>
+
+    <!-- Custom JS -->
+
+  </body>
+</html>
