--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <h1>Hello, admin!</h1>
     <form id        =  "uploadForm"
          enctype   =  "multipart/form-data"
-         action    =  "https://yankeesim-admin.herokuapp.com/upload/"
+         action    =  "/upload/"
          method    =  "post"
     >
     <input type="file" name="file" />
